[project]
name = "oucekonboi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.46.1",
    "pandas>=2.0.0",
    "folium>=0.14.0",
    "streamlit-folium>=0.15.0",
    "geopy>=2.3.0",
    "requests>=2.31.0",
]
